# vsss_client_rust

./: Cargo.toml  README.md  build.rs
examples/: firasim.rs  follow_ball.rs  follow_ball_blue.rs  ssl_vision.rs
src/: lib.rs  main.rs
src/protos/: messages_robocup_ssl_geometry.proto  packet.proto  replacement.proto  vssref_command.proto  vssref_common.proto  vssref_placement.proto
