[package]
name = "vsss_rust_client"
version = "0.6.1"
edition = "2021"

[dependencies]
bytes = "1.1.0"
prost = "0.10"
prost-types = "0.10"

socket2 = { version = "0.3.4", features = ["reuseport"] }
lazy_static = "1.4.0"
multicast-socket = "0.2.1"

serialport = "4.2.0"

[build-dependencies]
prost-build = "0.10.4"
